--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class='left'>
                 <h1>Your tech journey starts here</h1>
                 <p class='large'>Gain enough knowledge to help scale through the tech industry for free</p>
-                <div class='box'></div>
+                <img class='box' src='./Images/illustration.jpeg' />
                 <p class='small'>Gain enough knowledge to help scale through the tech industry for free</p>
                 <p class='large'>we will need more of your details after your account has been verified</p>
             </section>
